@@ -65,6 +65,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       pcap-filter(7): Clarify Ethernet, IPv4 and IPv6.
       pcap_lib_version(3PCAP): Add details and examples.
       Discuss Linux BPF extensions in the man pages.
+      Note endianness in pcap_compile(3PCAP) and pcap_lookupnet(3PCAP).
     Building and testing:
       Apply GNU Hurd support patch from the Debian package.
       CI: Introduce and use LIBPCAP_CMAKE_TAINTED.
